# poetry-hw-plugin

./: .gitignore  README.md  REVIEW.md  pyproject.toml  pyrightconfig.json
examples/demo-consumer/: .gitignore
examples/demo-consumer/variants/test2/: pyproject.toml
examples/demo-consumer/variants/test_1/: pyproject.toml
examples/demo-consumer/variants/win-cpu/: pyproject.toml
examples/demo-consumer/variants/win-cuda/: pyproject.toml
hw_plugin/: command.py  detector.py  hooks.py  plugin.py  scaffold.py  state.py
tests/: test_detector.py
