[tool.poetry]
name        = "poetry-hw-plugin"
version     = "0.1.0"
description = "Poetry plugin: auto-detect hardware and switch variant pyproject/lock"
authors     = ["Hank <ha28763024@gmail.com>"]
readme      = "README.md"
packages    = [{ include = "hw_plugin" }]

[tool.poetry.dependencies]
python      = ">=3.10"
rich        = "^13.7"
questionary = "^2.0"
tomli       = { version = "^2.0", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
mypy  = ">=1.5"
ruff  = ">=0.1"

[tool.poetry.plugins."poetry.application.plugin"]
hw-select = "hw_plugin.plugin:HwSelectPlugin"

[build-system]
requires      = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict         = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PTH"]
ignore = ["B008"]
