[tool.poetry]
name         = "demo-consumer"
version      = "0.1.0"
description  = ""
authors      = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
# ── test_1 specific dependencies ────────────────────────────────────────
rich = "*"
jupyter = "*"

[build-system]
requires      = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
